Bugfix: dummy image containers in a modal div had src="" which attempted to reload the page HTML itself as an image, wasting server effort and load time.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1616 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -26,8 +26,8 @@
 						<div class="frame"></div>
 						<div class="img-container">
 							<div class="images">
-                                <img src="" alt="">
-                                <img src="" alt="">
+                                <img alt="">
+                                <img alt="">
 							</div>
 						</div>
 						<div class="controls">
