Switched the "results" module to return an expliclitly-named "startup()".
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1618 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -165,6 +165,6 @@
 
 {% block js_require %}
     require(['simplekey/results'], function(results) {
-        results('{{ pile.slug }}');
+        results.startup('{{ pile.slug }}');
     });
 {% endblock %}
