Simplified how RequireJS kicks off the results page: by predefining a tiny module full of constants (like the pile_slug), there is suddenly no need to construct some way of passing a function into the module.  This eliminates a function(){} wrapper and thus a level of indentation!
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1622 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -164,7 +164,8 @@
 {% endblock %}
 
 {% block js_require %}
-    require(['simplekey/results'], function(results) {
-        results.startup('{{ pile.slug }}');
+    define('args', [], {
+        pile_slug: '{{ pile.slug }}'
     });
+    require(['simplekey/results']);
 {% endblock %}
