Leap forward in our design: created a "resouces" JS module of memoized functions that kick off an AJAX request each time a resource is requested by other code, but then keep returning that same pending AJAX request to later code that requests the same data.  Used this new superpower to make the species-count on the level-3 Helpful Overlay show the right number of species.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1623 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -149,7 +149,7 @@
 
     <div id="intro-overlay">
       <div class="number-of-species">
-        <h1>33 species</h1>
+        <h1><span class="number">33</span> species</h1>
         in this subgroup
       </div>
       <div class="number-of-questions">
