--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -153,7 +153,7 @@
         in this subgroup
       </div>
       <div class="number-of-questions">
-        <h1>35 questions</h1>
+        <h1><span class="number">35</span> questions</h1>
         to narrow your search
       </div>
       <div class="get-started">
