Bug fix: search box was broken while using the keyboard due to a missing trailing slash in the header HTML.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1636 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -12,7 +12,7 @@
                 Botany: Discover thousands of New England plants</a></h1>
             <nav>
                 <div id="search">
-                    <form id="search-suggest" action="/search" autocomplete="off">
+                    <form id="search-suggest" action="/search/" autocomplete="off">
                         <button>Search</button>
                         <input type="text" name="q" placeholder="Search..."
                             value="{{ request.GET.q }}">
