--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -1,9 +1,10 @@
         <footer>
             <div class="container">
                 <div class="three-col">
-                    <p class="copyright">All images, text and data copyright 
+                    <p class="copyright">All images and text copyright 
                     &#169; {% include "simplekey/_copyright_years.html" %}
-                    New England Wild Flower Society.
+                    New England Wild Flower Society
+                    or respective copyright holders.
                     All rights reserved.</p>
                     <p><a href="http://www.newfs.org/">New England Wild
                         Flower Society</a><br>
