Fix and improve glossarizing of terms on species pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1651 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -32,7 +32,8 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <p>You are here: <a href="{% url simplekey-page 1 %}">Start</a>
+                    <p class="nogloss">You are here: 
+                    <a href="{% url simplekey-page 1 %}">Start</a>
                     &gt;
                     <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title }}</a>
