Completed User Story 221: the results page "greeting overlay" now is only displayed on the initial page visit; returning to the page or hitting "reload" will now see the non-empty URL hashtag and refuse to re-display the overlay.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1656 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -3,6 +3,7 @@
 {% block title %}{{ pilegroup.friendly_title }}: {{ pile.friendly_title }}{% endblock %}
 
 {% block js_require %}
+    original_location_hash = window.location.hash; // for results_overlay.js
     define('args', [], {
         pile_slug: '{{ pile.slug }}'
     });
