Bugfix: an overly-general rule was ruining headers for a level-1/2 pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1664 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -48,9 +48,11 @@
                         <div class="clearit"></div>
                     </div>
 
-                    <h3><span class="species-count-phrase">
+                    <h3 class="species-count-heading">
+                      <span>
                         <span class="species-count">Finding</span>
-                        matching species</span>
+                        matching species
+                      </span>
                     </h3>
 
                     <div id="results-tabs">
