Add a bit of white space around the enlarged U.S. map.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1711 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -608,8 +608,10 @@ Sidebar Styles
     width: 100%;
 }
 #taxon #sb-player.html {
+    background: #fff;
     overflow: hidden;  /* Get rid of vertical scrollbar in WebKit for
                           the enlarged U.S. distribution map. */
+    padding: 5px;
 }
 
 /*******------
