--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -14,7 +14,7 @@
                 <div class="three-col">
                     <h6>Go Botany</h6>
                     <p><a href="{% url simplekey-page 1 %}"
-                          >Plant Identifier</a> |
+                          >Simple Key</a> |
                         <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
                         <a href="/advanced/">Advanced ID Tools</a> |
                         <a href="/help/">About</a> |
