--- a/gobotany/simplekey/templates/simplekey/_help.html
+++ b/gobotany/simplekey/templates/simplekey/_help.html
@@ -16,7 +16,7 @@
                 <div id="sidebar">
                     <div class="section">
                         {% url simplekey-help-start as u %}
-                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Getting Started with Plant Identifier</a></h5>
+                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Getting Started with the Simple Key</a></h5>
                     </div>
                     <div class="section">
                         {% url simplekey-help-about as u %}
