--- a/gobotany/simplekey/templates/simplekey/_old_base.html
+++ b/gobotany/simplekey/templates/simplekey/_old_base.html
@@ -16,7 +16,7 @@
     <div id="content">
       {% include "simplekey/header.html" %}
       <div id="navlinks">
-        <p>Home | Plant of the Day | Plant Identifier | Learning Opportunities</p>
+        <p>Home | Plant of the Day | Simple Key | Learning Opportunities</p>
       </div>
       {% block content %}{% endblock %}
       <div id="foot">
