--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -20,16 +20,15 @@
                         <img src="{{ image.image.url }}" alt="">
                     {% endfor %}
                     <div id="overlay">
-                        <h2>Plant Identifier</h2>
+                        <h2>Simple ID Key</h2>
                         <img src="/static/images/layout/separator.png"
                             alt="Go Botany">
                         <p>Want to know what that plant is? With our
-                        Plant Identifier, you can identify over
-                        1,200 New England plants! Answer some
-                        questions step by step, and narrow down the
-                        possibilities. The key works best if you
-                        have an actual sample or a few photos of
-                        your plant.</p>
+                        Simple Key, you can identify over
+                        1,200 of the most common native and naturalized
+                        New England plants! Observe closely, collect a
+                        sample or take a photo, answer some questions,
+                        and hone in on the correct identification.</p>
                         <a href="{% url simplekey-page 1 %}"
                             id="cta">Get Started</a>
                     </div>
