--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -53,7 +53,7 @@ nav #search {
     background: url(/static/images/layout/search-left.png) left center no-repeat;
 }
 nav #search input {
-    width: 194px;
+    width: 219px;
     height: 20px;
     border: 0;
     background: #fff;
@@ -213,26 +213,28 @@ body#home #top-wrapper {
     height: 318px;
     padding: 15px 30px 0;
     position: absolute;
-    left: 650px;
+    left: 646px;
+    text-align: center;
     top: 6px;
-    width: 244px;
+    width: 248px;
     z-index: 100;
 }
 
 #banner h2 {
-	margin: 0 0 15px 0;
-	line-height: normal;
 	color: #519136;	
+    font-size: 38px;
+    line-height: normal;
+	margin: 0 0 15px 0;
 }
 #banner p {
 	margin: 12px 0 0 0;
+    text-align: left;
 	text-shadow: 0px 1px 1px #fff;	
 }
 #banner a#cta {
 	display: block;
-	width: 244px;
 	height: 41px;
-	margin: 21px 0 0;
+	margin: 21px auto 0;
 	background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
 	text-indent: -9000px;
 }
@@ -314,7 +316,7 @@ div#potd {
 
 /*////////////////////////////////*/
 /*Styles for App level pages 
-(App pages - all levels of Plant Identifier etc.) */
+(App pages - all levels of Simple Key etc.) */
 /*////////////////////////////////*/
 body.app {
 	background: #f0f0c0;
