Update breadcrumbs with new Simple Key label. Remove old breadcrumbs from the Montshire Getting Started template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1730 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <p>You are here: <span>Start</span></p>
+                    <p>You are here: <span>Simple Key</span></p>
                 </div>
 
                 <h2>Which group best describes your plant?</h2>
