--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -33,7 +33,7 @@
             <div id="main">
                 <div id="breadcrumb">
                     <p class="nogloss">You are here: 
-                    <a href="{% url simplekey-page 1 %}">Start</a>
+                    <a href="{% url simplekey-page 1 %}">Simple Key</a>
                     &gt;
                     <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title }}</a>
