--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div id="main">
                     <div id="breadcrumb">
-                        <p>You are here: <a href="{% url simplekey-page 1 %}">Start</a>
+                        <p>You are here: <a href="{% url simplekey-page 1 %}">Simple Key</a>
                         &gt; <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title }}</a>
                         &gt; <span>{{ pile.friendly_title }}</span></p>
